Start activity for result

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="hint_second_number">Second number</string>
     <string name="number_error">You must enter both numbers</string>
     <string name="div_by_zero">Cannot divide by zero</string>
+    <string name="selectHistoryValue">Select</string>
+    <string name="show_history">Show history</string>
 </resources>
