--- a/app/src/main/res/values-sr/strings.xml
+++ b/app/src/main/res/values-sr/strings.xml
@@ -7,4 +7,5 @@
     <string name="number_error">Унесите оба броја</string>
     <string name="div_by_zero">Грешка! Дељење нулом</string>
     <string name="history_canceled">Одустали сте</string>
+    <string name="call">Call number</string>
 </resources>
