--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="prev"><![CDATA[<]]></string>
     <string name="next"><![CDATA[>]]></string>
     <string name="history_canceled">Canceled</string>
+    <string name="call">Call number</string>
 </resources>
